--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -1,9 +1,13 @@
 name: Waka Readme
 
+# on:
+#   schedule:
+#     # Runs at 12am IST
+#     - cron: '30 18 * * *'
 on:
-  schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+  push:
+    branches:
+      - master
 
 jobs:
   update-readme:
@@ -14,3 +18,5 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_OS: false
+          SHOW_PROJECTS: false
