--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -1,13 +1,9 @@
 name: Waka Readme
 
-# on:
-#   schedule:
-#     # Runs at 12am IST
-#     - cron: '30 18 * * *'
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
 
 jobs:
   update-readme:
